--- a/django_app/jeeart/templates/blog/index.html
+++ b/django_app/jeeart/templates/blog/index.html
@@ -13,6 +13,7 @@
         <li class="current"><a href="/blog">BLOG</a></li>
         <li><a href="/dispic">DISPIC</a></li>
     </ul>
+    <a href="/" class="logo-link"></a>
 </nav>
 {% endblock %}
 
