--- a/static_pages/less/base.less
+++ b/static_pages/less/base.less
@@ -1,7 +1,7 @@
 body{
     background: #F0F0F0;
     font-size: 12px;
-    font-family: Montserrat, Verdana, Helvetica, Helvetica Neue, Microsoft Yahei, Arial;
+    font-family: "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Hiragino Sans GB","Hiragino Sans GB W3", Microsoft Yahei, Arial;
     
     a{
         cursor: pointer;
