--- a/static_pages/less/header.less
+++ b/static_pages/less/header.less
@@ -3,6 +3,17 @@
     height: 300px;
     overflow:hidden;
     border-bottom: 1px solid #D6D6D6;
+    
+    position: relative;
+    
+    .logo-link {
+        position: absolute;
+        width: 106px;
+        height: 106px;
+        left: 50%;
+        margin-left: -53px;
+        top: 60px;
+    }
 }
 #nav {
     width: 650px;
