--- a/static_pages/less/page_dispic.less
+++ b/static_pages/less/page_dispic.less
@@ -1,11 +1,12 @@
 /*page_dispic.less*/
 @import "reset.less";
 @import "func.less";
+@import "footer.less";
 
 body {
 	background: url(../images/dispic/bg.png);
 	font-size: 14px;
-	font-family: Montserrat, Verdana, Helvetica, Helvetica Neue, Microsoft Yahei, Arial;
+	font-family: "ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Hiragino Sans GB","Hiragino Sans GB W3", Microsoft Yahei, Arial;
 }
 .wrapper {
 	width:1100px;
@@ -61,6 +62,10 @@ body {
     }
     
     .text { margin-bottom: 22px; }
+    
+    img {
+        display: block;
+    }
 }
 
 .intro {
@@ -120,11 +125,13 @@ body {
     }
 }
 
+/*
 #footer {
     text-align: center;
     color: #8C8C8C;
     padding: 24px 0 160px;
 }
+*/
 
 /* conpoments */
 .d-btn {
