--- a/django_app/jeeart/static_media/css/page_home.css
+++ b/django_app/jeeart/static_media/css/page_home.css
@@ -2,14 +2,14 @@ body,h1,h2,h3,h4,h5,h6,ul,ol,dl,p{margin:0;padding:0;}
 img{border:0 none;}
 ul,ol,dl{list-style:none;}
 a{text-decoration:none;}
-body{background:#F0F0F0;font-size:12px;font-family:Montserrat, Verdana, Helvetica, Helvetica Neue, Microsoft Yahei, Arial;}body a{cursor:pointer;}
+body{background:#F0F0F0;font-size:12px;font-family:"ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Hiragino Sans GB","Hiragino Sans GB W3",Microsoft Yahei,Arial;}body a{cursor:pointer;}
 .hide{display:none;}
 .wrapper{min-width:840px;}
-#header{background:#f9f9f9 url(../images/logo.png) no-repeat 50% 60px;height:300px;overflow:hidden;border-bottom:1px solid #D6D6D6;}
+#header{background:#f9f9f9 url(../images/logo.png) no-repeat 50% 60px;height:300px;overflow:hidden;border-bottom:1px solid #D6D6D6;position:relative;}#header .logo-link{position:absolute;width:106px;height:106px;left:50%;margin-left:-53px;top:60px;}
 #nav{width:650px;margin:218px auto 0;overflow:hidden;}#nav li{float:left;width:162px;overflow:hidden;text-align:center;}
 #nav li.current a{color:#444444;}
 #nav a{color:#999999;line-height:40px;font-weight:500;font-size:14px;}#nav a:hover{color:#444444;}
-#footer .copyright{padding:40px 0 300px;text-align:center;}#footer .copyright .cr{padding:30px 0 8px 0;background:url(../images/dyt2.png) 50% 0 no-repeat;color:#A5A5A5;font-fize:12px;}
+#footer .copyright{padding:40px 0 60px;text-align:center;}#footer .copyright .cr{padding:30px 0 8px 0;background:url(../images/dyt2.png) 50% 0 no-repeat;color:#A5A5A5;font-fize:12px;}
 #content{width:820px;margin:50px auto 0;}
 #gallery{position:relative;background:#fff;border-left:1px solid #CFCFCF;border-right:1px solid #CFCFCF;border-bottom:1px solid #ABABAB;margin-bottom:50px;-webkit-box-shadow:0 1px 1px #cccccc;-moz-box-shadow:0 1px 1px #cccccc;-o-box-shadow:0 1px 1px #cccccc;-ms-box-shadow:0 1px 1px #cccccc;box-shadow:0 1px 1px #cccccc;-webkit-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-ms-border-radius:3px;border-radius:3px;}#gallery .gallery-scr{width:800px;height:480px;padding:10px 0;margin:0 auto;}#gallery .gallery-scr img{width:800px;height:480px;}
 #gallery .gallery-left-btn,#gallery .gallery-right-btn{position:absolute;width:34px;height:34px;text-align:center;top:50%;margin-top:-17px;}#gallery .gallery-left-btn span,#gallery .gallery-right-btn span{width:7px;height:13px;position:absolute;left:50%;top:50%;margin-left:-4px;margin-top:-6px;background-image:url(../images/icon/arrow_grey.png);background-repeat:no-repeat;}
