--- a/django_app/jeeart/static_media/css/page_home.css
+++ b/django_app/jeeart/static_media/css/page_home.css
@@ -16,8 +16,9 @@ body{background:#F0F0F0;font-size:12px;font-family:"ff-tisa-web-pro-1","ff-tisa-
 #gallery .gallery-left-btn:hover,#gallery .gallery-right-btn:hover{background:url(../images/bg/arrow.png) 50% 50% no-repeat;}#gallery .gallery-left-btn:hover span,#gallery .gallery-right-btn:hover span{background-image:url(../images/icon/arr.png);}
 #gallery .gallery-left-btn{left:-56px;}#gallery .gallery-left-btn span{background-position:0 0;}
 #gallery .gallery-right-btn{right:-56px;}#gallery .gallery-right-btn span{background-position:0 -14px;margin-left:-3px;}
-#shortcut-list{overflow:hidden;}#shortcut-list ul{overflow:hidden;zoom:1;display:none;}
-#shortcut-list ul.current{display:block;}
+#shortcut-list{overflow:hidden;}#shortcut-list .sl-viewport{overflow:hidden;position:relative;width:820px;height:670px;}
+#shortcut-list .sl-con-wrapper{position:absolute;left:0;top:0;}
+#shortcut-list ul{overflow:hidden;zoom:1;float:left;}
 #shortcut-list li{background:#fff;width:240px;height:180px;padding:9px;border-width:1px;border-style:solid;border-color:#fff #D2D2D2 #ADADAD #D5D5D5;margin-right:20px;margin-bottom:20px;float:left;-webkit-box-shadow:0 1px 1px #cccccc;-moz-box-shadow:0 1px 1px #cccccc;-o-box-shadow:0 1px 1px #cccccc;-ms-box-shadow:0 1px 1px #cccccc;box-shadow:0 1px 1px #cccccc;-webkit-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-ms-border-radius:3px;border-radius:3px;}#shortcut-list li img{width:240px;height:180px;}
 #shortcut-list li.no-mg{margin-right:0;}
 .shortcut-ctrl{text-align:center;}.shortcut-ctrl ul{display:inline-block;zoom:1;*display:inline;padding:24px 0 46px;}.shortcut-ctrl ul li{float:left;width:34px;height:12px;}.shortcut-ctrl ul li.current a{background-position:top left;}
