--- a/static_pages/less/home_sec.less
+++ b/static_pages/less/home_sec.less
@@ -70,11 +70,21 @@
 }
 
 #shortcut-list {
-    overflow:hidden;
-    ul {overflow: hidden; zoom:1; display:none}
-    ul.current {
-        display:block;
+    .sl-viewport {
+        overflow: hidden;
+        position: relative;
+        width: 820px;
+        height: 670px;
     }
+    .sl-con-wrapper {
+        position: absolute;
+        left: 0;
+        top: 0;
+    }
+
+    overflow:hidden;
+    ul {overflow: hidden; zoom:1; float: left}
+
     
     li {
         background: #fff;
