--- a/django_app/jeeart/templates/home/index.html
+++ b/django_app/jeeart/templates/home/index.html
@@ -89,6 +89,6 @@
     
     <script src="{{MEDIA_URL}}js/jquery-1.9.1.min.js"></script>
     <script src="{{MEDIA_URL}}js/jquery.flexslider-min.js"></script>
-    <script type="text/javascript" src="{{MEDIA_URL}}js/pages/home.js"></script>
+    <script type="text/javascript" src="{{MEDIA_URL}}js/pages/home.js?t=130714"></script>
  
 {% endblock %}
