--- a/django_app/jeeart/static_media/css/page_home.css
+++ b/django_app/jeeart/static_media/css/page_home.css
@@ -1,28 +1,277 @@
-body,h1,h2,h3,h4,h5,h6,ul,ol,dl,p{margin:0;padding:0;}
-img{border:0 none;}
-ul,ol,dl{list-style:none;}
-a{text-decoration:none;}
-body{background:#F0F0F0;font-size:12px;font-family:"ff-tisa-web-pro-1","ff-tisa-web-pro-2","Lucida Grande","Hiragino Sans GB","Hiragino Sans GB W3",Microsoft Yahei,Arial;}body a{cursor:pointer;}
-.hide{display:none;}
-.wrapper{min-width:840px;}
-#header{background:#f9f9f9 url(../images/logo.png) no-repeat 50% 60px;height:300px;overflow:hidden;border-bottom:1px solid #D6D6D6;position:relative;}#header .logo-link{position:absolute;width:106px;height:106px;left:50%;margin-left:-53px;top:60px;}
-#nav{width:650px;margin:218px auto 0;overflow:hidden;}#nav li{float:left;width:162px;overflow:hidden;text-align:center;}
-#nav li.current a{color:#444444;}
-#nav a{color:#999999;line-height:40px;font-weight:500;font-size:14px;}#nav a:hover{color:#444444;}
-#footer .copyright{padding:40px 0 60px;text-align:center;}#footer .copyright .cr{padding:30px 0 8px 0;background:url(../images/dyt2.png) 50% 0 no-repeat;color:#A5A5A5;font-fize:12px;}
-#content{width:820px;margin:50px auto 0;}
-#gallery{position:relative;background:#fff;border-left:1px solid #CFCFCF;border-right:1px solid #CFCFCF;border-bottom:1px solid #ABABAB;margin-bottom:50px;-webkit-box-shadow:0 1px 1px #cccccc;-moz-box-shadow:0 1px 1px #cccccc;-o-box-shadow:0 1px 1px #cccccc;-ms-box-shadow:0 1px 1px #cccccc;box-shadow:0 1px 1px #cccccc;-webkit-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-ms-border-radius:3px;border-radius:3px;}#gallery .gallery-scr{width:800px;height:480px;padding:10px 0;margin:0 auto;}#gallery .gallery-scr img{width:800px;height:480px;}
-#gallery .gallery-left-btn,#gallery .gallery-right-btn{position:absolute;width:34px;height:34px;text-align:center;top:50%;margin-top:-17px;}#gallery .gallery-left-btn span,#gallery .gallery-right-btn span{width:7px;height:13px;position:absolute;left:50%;top:50%;margin-left:-4px;margin-top:-6px;background-image:url(../images/icon/arrow_grey.png);background-repeat:no-repeat;}
-#gallery .gallery-left-btn:hover,#gallery .gallery-right-btn:hover{background:url(../images/bg/arrow.png) 50% 50% no-repeat;}#gallery .gallery-left-btn:hover span,#gallery .gallery-right-btn:hover span{background-image:url(../images/icon/arr.png);}
-#gallery .gallery-left-btn{left:-56px;}#gallery .gallery-left-btn span{background-position:0 0;}
-#gallery .gallery-right-btn{right:-56px;}#gallery .gallery-right-btn span{background-position:0 -14px;margin-left:-3px;}
-#shortcut-list{overflow:hidden;}#shortcut-list .sl-viewport{overflow:hidden;position:relative;width:820px;height:670px;}
-#shortcut-list .sl-con-wrapper{position:absolute;left:0;top:0;}
-#shortcut-list ul{overflow:hidden;zoom:1;float:left;}
-#shortcut-list li{background:#fff;width:240px;height:180px;padding:9px;border-width:1px;border-style:solid;border-color:#fff #D2D2D2 #ADADAD #D5D5D5;margin-right:20px;margin-bottom:20px;float:left;-webkit-box-shadow:0 1px 1px #cccccc;-moz-box-shadow:0 1px 1px #cccccc;-o-box-shadow:0 1px 1px #cccccc;-ms-box-shadow:0 1px 1px #cccccc;box-shadow:0 1px 1px #cccccc;-webkit-border-radius:3px;-moz-border-radius:3px;-o-border-radius:3px;-ms-border-radius:3px;border-radius:3px;}#shortcut-list li img{width:240px;height:180px;}
-#shortcut-list li.no-mg{margin-right:0;}
-.shortcut-ctrl{text-align:center;}.shortcut-ctrl ul{display:inline-block;zoom:1;*display:inline;padding:24px 0 46px;}.shortcut-ctrl ul li{float:left;width:34px;height:12px;}.shortcut-ctrl ul li.current a{background-position:top left;}
-.shortcut-ctrl ul li a{display:inline-block;width:12px;height:12px;background:url(../images/icon/grey-dot.png) top right no-repeat;}.shortcut-ctrl ul li a:hover{background-position:top left;}
-.aboutus{background:#E1E1E1;border-top:1px solid #CFCFCF;border-bottom:1px solid #CBCBCB;height:330px;}.aboutus ul{width:820px;margin:0 auto;overflow:hidden;}.aboutus ul li{font-size:14px;line-height:1.8;float:left;width:260px;padding-top:76px;text-align:center;margin-right:20px;}.aboutus ul li.aboutus-nomg{margin-right:0;}
-.aboutus ul .ab-tit{color:#333333;}
-.aboutus ul .ab-desc{color:#888888;}
+/*page_home.less*/
+/*CSS Reset*/
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+ul,
+ol,
+dl,
+p {
+  margin: 0;
+  padding: 0;
+}
+img {
+  border: 0 none;
+}
+ul,
+ol,
+dl {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
+/*Background Color*/
+/*Border*/
+/*Text Color*/
+/*Text size*/
+/*Space*/
+/*Screen size*/
+/*正方形*/
+/*三角形*/
+/*圆角*/
+/*阴影*/
+/*水平垂直居中*/
+body {
+  background: #F0F0F0;
+  font-size: 12px;
+  font-family: "ff-tisa-web-pro-1", "ff-tisa-web-pro-2", "Lucida Grande", "Hiragino Sans GB", "Hiragino Sans GB W3", Microsoft Yahei, Arial;
+}
+body a {
+  cursor: pointer;
+}
+.hide {
+  display: none;
+}
+.wrapper {
+  min-width: 840px;
+}
+#header {
+  background: #f9f9f9 url(../images/logo.png) no-repeat 50% 60px;
+  height: 300px;
+  overflow: hidden;
+  border-bottom: 1px solid #D6D6D6;
+  position: relative;
+}
+#header .logo-link {
+  position: absolute;
+  width: 106px;
+  height: 106px;
+  left: 50%;
+  margin-left: -53px;
+  top: 60px;
+}
+#nav {
+  width: 650px;
+  margin: 218px auto 0;
+  overflow: hidden;
+}
+#nav li {
+  float: left;
+  width: 162px;
+  overflow: hidden;
+  text-align: center;
+}
+#nav li.current a {
+  color: #444444;
+}
+#nav a {
+  color: #999999;
+  line-height: 40px;
+  font-weight: 500;
+  font-size: 14px;
+}
+#nav a:hover {
+  color: #444444;
+}
+#footer .copyright {
+  padding: 40px 0 60px;
+  text-align: center;
+}
+#footer .copyright .cr {
+  padding: 30px 0 8px 0;
+  background: url(../images/dyt2.png) 50% 0 no-repeat;
+  color: #A5A5A5;
+  font-fize: 12px;
+}
+#content {
+  width: 820px;
+  margin: 50px auto 0;
+}
+#gallery {
+  position: relative;
+  background: #fff;
+  border-left: 1px solid #CFCFCF;
+  border-right: 1px solid #CFCFCF;
+  border-bottom: 1px solid #ABABAB;
+  margin-bottom: 50px;
+  -webkit-box-shadow: 0 1px 1px #cccccc;
+  -moz-box-shadow: 0 1px 1px #cccccc;
+  -o-box-shadow: 0 1px 1px #cccccc;
+  -ms-box-shadow: 0 1px 1px #cccccc;
+  box-shadow: 0 1px 1px #cccccc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+}
+#gallery .gallery-scr {
+  width: 800px;
+  height: 480px;
+  padding: 10px 0;
+  margin: 0 auto;
+}
+#gallery .gallery-scr img {
+  width: 800px;
+  height: 480px;
+}
+#gallery .gallery-left-btn,
+#gallery .gallery-right-btn {
+  position: absolute;
+  width: 34px;
+  height: 34px;
+  text-align: center;
+  top: 50%;
+  margin-top: -17px;
+}
+#gallery .gallery-left-btn span,
+#gallery .gallery-right-btn span {
+  width: 7px;
+  height: 13px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  margin-left: -4px;
+  margin-top: -6px;
+  background-image: url(../images/icon/arrow_grey.png);
+  background-repeat: no-repeat;
+}
+#gallery .gallery-left-btn:hover,
+#gallery .gallery-right-btn:hover {
+  background: url(../images/bg/arrow.png) 50% 50% no-repeat;
+}
+#gallery .gallery-left-btn:hover span,
+#gallery .gallery-right-btn:hover span {
+  background-image: url(../images/icon/arr.png);
+}
+#gallery .gallery-left-btn {
+  left: -56px;
+}
+#gallery .gallery-left-btn span {
+  background-position: 0 0;
+}
+#gallery .gallery-right-btn {
+  right: -56px;
+}
+#gallery .gallery-right-btn span {
+  background-position: 0 -14px;
+  margin-left: -3px;
+}
+#shortcut-list {
+  overflow: hidden;
+}
+#shortcut-list .sl-viewport {
+  overflow: hidden;
+  position: relative;
+  width: 820px;
+  height: 660px;
+}
+#shortcut-list .sl-con-wrapper {
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+#shortcut-list ul {
+  overflow: hidden;
+  zoom: 1;
+  float: left;
+}
+#shortcut-list li {
+  background: #fff;
+  width: 240px;
+  height: 180px;
+  padding: 9px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #fff #D2D2D2 #ADADAD #D5D5D5;
+  margin-right: 20px;
+  margin-bottom: 20px;
+  float: left;
+  -webkit-box-shadow: 0 1px 1px #cccccc;
+  -moz-box-shadow: 0 1px 1px #cccccc;
+  -o-box-shadow: 0 1px 1px #cccccc;
+  -ms-box-shadow: 0 1px 1px #cccccc;
+  box-shadow: 0 1px 1px #cccccc;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+}
+#shortcut-list li img {
+  width: 240px;
+  height: 180px;
+}
+#shortcut-list li.no-mg {
+  margin-right: 0;
+}
+.shortcut-ctrl {
+  text-align: center;
+}
+.shortcut-ctrl ul {
+  display: inline-block;
+  zoom: 1;
+  *display: inline;
+  padding: 24px 0 46px;
+}
+.shortcut-ctrl ul li {
+  float: left;
+  width: 34px;
+  height: 12px;
+}
+.shortcut-ctrl ul li.current a {
+  background-position: top left;
+}
+.shortcut-ctrl ul li a {
+  display: inline-block;
+  width: 12px;
+  height: 12px;
+  background: url(../images/icon/grey-dot.png) top right no-repeat;
+}
+.shortcut-ctrl ul li a:hover {
+  background-position: top left;
+}
+.aboutus {
+  background: #E1E1E1;
+  border-top: 1px solid #CFCFCF;
+  border-bottom: 1px solid #CBCBCB;
+  height: 330px;
+}
+.aboutus ul {
+  width: 820px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+.aboutus ul li {
+  font-size: 14px;
+  line-height: 1.8;
+  float: left;
+  width: 260px;
+  padding-top: 76px;
+  text-align: center;
+  margin-right: 20px;
+}
+.aboutus ul li.aboutus-nomg {
+  margin-right: 0;
+}
+.aboutus ul .ab-tit {
+  color: #333333;
+}
+.aboutus ul .ab-desc {
+  color: #888888;
+}
