--- a/static_pages/less/home_sec.less
+++ b/static_pages/less/home_sec.less
@@ -83,11 +83,14 @@
     }
 
     overflow:hidden;
-    ul {overflow: hidden; zoom:1; float: left}
+    ul {
+        overflow: hidden; zoom:1; float: left;
+        width: 820px;
+    }
 
     
     li {
-        background: #fff;
+        background: #fff url(../images/icon/loading.gif) no-repeat 50% 50%;
         width: 240px;
         height: 180px;
         padding: 9px;
