--- a/django_app/jeeart/templates/base.html
+++ b/django_app/jeeart/templates/base.html
@@ -7,6 +7,9 @@
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"  />-->
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="black" name="apple-mobile-web-app-status-bar-style" />
+
+    <script src="{{MEDIA_URL}}js/jquery-1.9.1.min.js"></script>
+    <script src="{{MEDIA_URL}}js/modernizr.js"></script>
     
     {% block css_link %} {% endblock %}
     
