--- a/static_pages/less/header.less
+++ b/static_pages/less/header.less
@@ -1,23 +1,68 @@
+//logo animation
+@-webkit-keyframes logo {
+  0%   { width: 8px; height: 8px; }
+  71%  { width: 120px; height:120px; }
+  100% { width: 104px; height: 104px; }
+}
+@-moz-keyframes logo {
+  0%   { width: 8px; height: 8px; }
+  71%  { width: 120px; height:120px; }
+  100% { width: 104px; height: 104px; }
+}
+@-o-keyframes logo {
+  0%   { width: 8px; height: 8px; }
+  71%  { width: 120px; height:120px; }
+  100% { width: 104px; height: 104px; }
+}
+@keyframes logo {
+  0%   { width: 8px; height: 8px; }
+  71%  { width: 120px; height:120px; }
+  100% { width: 104px; height: 104px; }
+}
+
 #header{
-    background:#F9F9F9 url(../images/logo.png) no-repeat 50% 60px;
     height: 300px;
     overflow:hidden;
     border-bottom: 1px solid #D6D6D6;
-    
+    background-color: #F9F9F9;
     position: relative;
     
+    .logo-wrapper {
+        height: 224px;
+        overflow: hidden;
+    }
+    
     .logo-link {
-        position: absolute;
-        width: 106px;
-        height: 106px;
-        left: 50%;
-        margin-left: -53px;
-        top: 60px;
+        display: block;
+        margin: 60px auto 0 auto;
+        width: 104px;
+        height: 104px;
+        overflow: hidden;
+
+        img {
+            display:block;
+            width:100%;
+        }
     }
 }
+
+.cssanimations{
+    #header {
+        .logo-wrapper {
+            display: -webkit-box;
+            -webkit-box-align: center;
+            -webkit-box-pack: center;
+        }
+        .logo-link {
+            .animation(logo, 0.7s);
+            margin: 0;
+        }    
+    }
+}
+
 #nav {
     width: 650px;
-    margin: 218px auto 0;
+    margin: 0px auto 0;
     overflow: hidden;
     
     li {
