--- a/static_pages/less/home_sec.less
+++ b/static_pages/less/home_sec.less
@@ -175,3 +175,25 @@
     }
 }
 
+/*css anim*/
+.csstransitions {
+    #nav li {
+        opacity: 0;
+    }
+    #nav li:nth-child(1) {
+        .transition(opacity, 0.5s, ease-out, 0.4s)
+    }
+    #nav li:nth-child(2) {
+        .transition(opacity, 0.5s, ease-out, 0.6s)
+    }
+    #nav li:nth-child(3) {
+        .transition(opacity, 0.5s, ease-out, 0.8s)
+    }
+    #nav li:nth-child(4) {
+        .transition(opacity, 0.5s, ease-out, 1.0s)
+    }
+    
+    #nav.show li {
+        opacity: 1;
+    }
+}
