--- a/django_app/jeeart/static_media/less/base.less
+++ b/django_app/jeeart/static_media/less/base.less
@@ -6,13 +6,20 @@ body{
     a{
         cursor: pointer;
     }
+
+    &.ofh {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
 }
 .hide {display:none}
 .wrapper {
     overflow: hidden;
     zoom: 1;
-    width: 1162px;
-    margin: 0 auto;
+    min-width: 1162px;
+    //margin: 0 auto;
     background: #2b2d30;
     -webkit-box-shadow: 0 0 4px #222;
 }
