--- a/django_app/jeeart/static_media/less/home_sec.less
+++ b/django_app/jeeart/static_media/less/home_sec.less
@@ -4,7 +4,7 @@
     background: #333739;
     padding: 20px;
     border-left: 1px solid #333;
-    float: right;
+    float: left;
 }
 #gallery {
     position: relative;
@@ -13,7 +13,7 @@
     //border-left: 1px solid #CFCFCF;
     //border-right: 1px solid #CFCFCF;
     //border-bottom: 1px solid #ABABAB;
-    margin-bottom: 50px;
+    margin-bottom: 40px;
     
     //.box-shadow-o(0, 1px, 1px, #ccc);
     //.border-radius(3px);
