--- a/django_app/jeeart/templates/home/index.html
+++ b/django_app/jeeart/templates/home/index.html
@@ -16,10 +16,12 @@
         <li><a href="/dispic">DISPIC</a></li>
     </ul>
 </nav>
+<div class="ong-info"></div>
 {% endblock %}
 
 {% block page_content %}
     <div id="content">
+        <div class="con-inner">
         <div id="gallery">
             <div class="gallery-scr flexslider">
                 <ul class="slides">
@@ -104,6 +106,7 @@ ONG Studio的成员在2011年怀着对设计的热情以及互联网文化的信
                 <li class="ms"></li>
                 <li class="lenovo"></li>
             </ul>
+        </div>
         </div>
     </div>
     <!--
