--- a/django_app/jeeart/static_media/less/home_sec.less
+++ b/django_app/jeeart/static_media/less/home_sec.less
@@ -3,7 +3,7 @@
     width: 820px;
     background: #333739;
     padding: 20px;
-    border-left: 1px solid #333;
+    border-left: 1px solid #333639;
     float: left;
 }
 #gallery {
@@ -258,8 +258,8 @@
 
         li {
             float: left;
-            width: 185px;
-            height: 108px;
+            width: 25%;
+            min-height: 108px;
             background-repeat: no-repeat;
             background-position: 50% 50%;
 
@@ -302,7 +302,7 @@
 
         li {
             float: left;
-            width: 246px;
+            width: 33%;
             height: 56px;
             background-repeat: no-repeat;
             background-position: 50% 50%;
@@ -328,4 +328,17 @@
             }
         }
     }
+}
+
+#header {
+    position: relative;
+}
+.ong-info {
+    position: absolute;
+    bottom: 60px;
+    width: 100%;
+    height: 50px;
+
+    background: url(../images/ong.png) no-repeat 50% 50%;
+    background-size: auto 100%;
 }
