--- a/django_app/jeeart/static_media/less/header.less
+++ b/django_app/jeeart/static_media/less/header.less
@@ -85,3 +85,20 @@
     }
     
 }
+
+#header {
+    position: relative;
+}
+.ong-info {
+    position: absolute;
+    bottom: 60px;
+    width: 100%;
+    height: 50px;
+
+
+    color: #a0a0a6;
+    font-size: 14px;
+    font-weight: bold;
+    text-align: center;
+    line-height: 1.9;
+}
