--- a/django_app/jeeart/templates/home/index.html
+++ b/django_app/jeeart/templates/home/index.html
@@ -7,7 +7,7 @@
 {% endblock %}
 
 {% block nav %}
-<div class="logo-wrapper"><a href="/" class="logo-link"><img alt="" src="{{MEDIA_URL}}images/logo.png" /></a></div>
+<div class="logo-wrapper"><a href="/" class="logo-link"><img alt="" src="{{MEDIA_URL}}images/logo_03.png" /></a></div>
 <nav>
     <ul id="nav">
         <!--<li class="current"><a href="/">HOME</a></li>-->
@@ -16,7 +16,10 @@
         <li><a href="/dispic">DISPIC</a></li>
     </ul>
 </nav>
-<div class="ong-info"></div>
+<div class="ong-info">
+    Design your trust<br/>
+    &copy; ong
+</div>
 {% endblock %}
 
 {% block page_content %}
