--- a/django_app/jeeart/static_media/less/header.less
+++ b/django_app/jeeart/static_media/less/header.less
@@ -96,9 +96,9 @@
     height: 50px;
 
 
-    color: #a0a0a6;
+    color: #a0a0a9;
     font-size: 14px;
-    font-weight: bold;
+    font-weight: 500;
     text-align: center;
     line-height: 1.9;
 }
