--- a/django_app/jeeart/static_media/less/header.less
+++ b/django_app/jeeart/static_media/less/header.less
@@ -68,19 +68,23 @@
         
         overflow: hidden;
         text-align: center;
+        margin-bottom: 45px;
     }
     
-    li.current a { color: #5b9056 }
+    li.current a { color: #5b9056; border-bottom: 2px solid #4B6A4A; }
     
     a {
         color: #eee;
-        line-height: 40px;
+        line-height: 22px;
         font-weight: 500;
         font-size: 14px;
+        display: inline-block;
+        text-align: center;
+        border-bottom: 2px solid transparent;
         
         &:hover {
             color: #5b9056;
-            text-decoration: underline;
+            border-bottom: 2px solid #4B6A4A;
         }
     }
     
