--- a/django_app/jeeart/static_media/less/page_dispic.less
+++ b/django_app/jeeart/static_media/less/page_dispic.less
@@ -106,7 +106,7 @@ body {
     .member {
         float: left;
         width: 49.8%;
-        padding: 60px 0;
+        padding: 60px 0 90px 0;
         text-align: center;
     }
     .member-name {
@@ -121,7 +121,7 @@ body {
         }
     }
     .member-intro {
-        width: 60%;
+        width: 62%;
         margin: 0 auto;
         padding: 18px 0;
         color: #777;
