--- a/django_app/jeeart/templates/blog/index.html
+++ b/django_app/jeeart/templates/blog/index.html
@@ -9,9 +9,8 @@
 <div class="logo-wrapper"><a href="/" class="logo-link"><img alt="" src="{{MEDIA_URL}}images/logo_03.png" /></a></div>
 <nav>
     <ul id="nav">
-        <li><a href="/">首页</a></li>
-        <li><a href="/#about">我们</a></li>
-        <li class="current"><a href="/blog">博客</a></li>
+        <li><a href="/">我&nbsp;&nbsp;&nbsp;&nbsp;们</a></li>
+        <li class="current"><a href="/blog">博&nbsp;&nbsp;&nbsp;&nbsp;客</a></li>
         <li><a href="/dispic">DISPIC</a></li>
     </ul>
 </nav>
