--- a/django_app/jeeart/templates/home/index.html
+++ b/django_app/jeeart/templates/home/index.html
@@ -11,8 +11,8 @@
 <nav>
     <ul id="nav">
         <!--<li class="current"><a href="/">HOME</a></li>-->
-        <li><a href="#hi">我们</a></li>
-        <li><a href="/blog">博客</a></li>
+        <li class="current"><a href="#hi">我&nbsp;&nbsp;&nbsp;&nbsp;们</a></li>
+        <li><a href="/blog">博&nbsp;&nbsp;&nbsp;&nbsp;客</a></li>
         <li><a href="/dispic">DISPIC</a></li>
     </ul>
 </nav>
@@ -108,6 +108,16 @@ ONG Studio的成员在2011年怀着对设计的热情以及互联网文化的信
                 <li class="tencent"></li>
                 <li class="ms"></li>
                 <li class="lenovo"></li>
+            </ul>
+        </div>
+
+        <div class="touch">
+            <h4>Touch</h4>
+            <ul class="touch-link">
+                <li class="wechat"><a href="weixin://contacts/profile/jee"></a></li>
+                <li class="mail"><a href="mailto://contact@ongllc.com"></a></li>
+                <li class="dribbble"><a href="http://dribbble.com/jee"></a></li>
+                <li class="github"><a href="https://github.com/jeeart"></a></li>
             </ul>
         </div>
         </div>
