--- a/django_app/jeeart/static_media/less/blog_sec.less
+++ b/django_app/jeeart/static_media/less/blog_sec.less
@@ -47,6 +47,7 @@
                     
                     p {
                         margin-bottom: 16px;
+                        max-width: 844px;
                     }
                     img {
                         max-width: 100%;
