--- a/django_app/jeeart/static_media/less/home_sec.less
+++ b/django_app/jeeart/static_media/less/home_sec.less
@@ -2,9 +2,11 @@
 #content {
     width: 820px;
     background: #333739;
-    padding: 20px 20px 0 20px;
+    padding: 0px 20px;
     border-left: 1px solid #242628;
     float: left;
+
+    .con-inner {padding-top: 20px}
 }
 #gallery {
     position: relative;
