--- a/django_app/jeeart/templates/dispic/index.html
+++ b/django_app/jeeart/templates/dispic/index.html
@@ -22,6 +22,7 @@
 
 {% block page_content %}
 <div id="content" clsss="dispic-con">
+	<div class="con-inner">
 	<div class="banner">
 		<img class="banner-img" alt="" src="{{MEDIA_URL}}images/dispic_02.jpg" />
 		<div class="banner-con">
@@ -86,6 +87,7 @@
 	<div class="thanks">
 		<strong>THANKS</strong>
 		<p>From Chengdu & Hangzhou with love. Jee © 2013</p>
+	</div>
 	</div>
 </div>
 
