--- a/django_app/jeeart/static_media/less/blog_sec.less
+++ b/django_app/jeeart/static_media/less/blog_sec.less
@@ -64,5 +64,35 @@
             }
         }
     }
+
+    .page-ctrl {
+        width: 146px;
+        overflow: hidden;
+        zoom:1;
+        margin: 8px auto 46px auto;
+
+        a {
+            text-decoration: none;
+            color: #6AA764;
+            cursor: not-allowed;
+            opacity: 0.7;
+
+            &.enable {
+                cursor: pointer;
+                opacity: 1;
+            }
+            background: url(../images/prevnext_03.png) no-repeat;
+        }
+        .prev-btn {
+            float: left;
+            padding-left: 20px;
+            background-position: 0 50%;
+        }
+        .next-btn {
+            float: right;
+            padding-right: 20px;
+            background-position: right 50%;
+        }
+    }
     
 }
