--- a/django_app/jeeart/templates/dispic/index.html
+++ b/django_app/jeeart/templates/dispic/index.html
@@ -16,7 +16,7 @@
 </nav>
 <div class="ong-info">
     Design your trust<br/>
-    &copy; ong
+    &copy; ONG
 </div>
 {% endblock %}
 
@@ -86,7 +86,7 @@
 
 	<div class="thanks">
 		<strong>THANKS</strong>
-		<p>From Chengdu & Hangzhou with love. Jee © 2013</p>
+		<p>From Chengdu & Hangzhou with love. ONG © 2013</p>
 	</div>
 	</div>
 </div>
