--- a/django_app/jeeart/static_media/less/home_sec.less
+++ b/django_app/jeeart/static_media/less/home_sec.less
@@ -98,7 +98,7 @@
     li {
         background: #28292c url(../images/icon/loading.gif) no-repeat 50% 50%;
         width: 240px;
-        height: 180px;
+        min-height: 180px;
         padding: 9px;
         border-width:1px;
         border-style: solid;
@@ -111,8 +111,8 @@
         //.border-radius(3px);
         
         img {
-            width: 240px;
-            height: 180px;
+            width: 100%;
+            display: block;
         }
         
         &.no-mg {
